# qfreerdp

./: .gitignore  CMakeLists.txt  launcher.cpp  launcher.h  main.cpp  qfreerdp.h
